--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,7 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-/* Firefox */
+/* Firefox
 input[type=number] {
   -moz-appearance: textfield;
-}
+} */
